<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.treyban.myapplication.MainActivity">

    <TextView
        android:id="@+id/radio_now_play"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_marginTop="7dp"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/NowPlay"
        android:textAppearance="@android:style/TextAppearance.Material.Title"
        android:textSize="20sp"
        android:transitionName="@string/Text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="270dp"
        android:layout_height="270dp"
        android:layout_marginEnd="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginTop="64dp"
        app:cardBackgroundColor="@color/white_dark"
        app:cardCornerRadius="6dp"
        app:cardElevation="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ProgressBar
            android:id="@+id/progressBar2"
            style="?android:attr/progressBarStyle"
            android:layout_width="75dp"
            android:layout_height="75dp"
            android:layout_gravity="center"
            android:layout_marginEnd="14dp"
            android:elevation="10dp"
            android:visibility="invisible" />

        <ImageButton
            android:id="@+id/play"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="292dp"
            android:layout_height="292dp"
            android:layout_gravity="center"
            android:adjustViewBounds="true"
            android:bottomLeftRadius="6dp"
            android:bottomRightRadius="6dp"
            android:contentDescription="@string/Content_description_cover"
            android:scaleType="centerCrop"
            android:src="@drawable/default_song_album"
            android:topLeftRadius="6dp"
            android:topRightRadius="6dp"
            android:visibility="visible" />

        <ImageButton
            android:id="@+id/play_button"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="282dp"
            android:layout_height="282dp"
            android:layout_gravity="center"
            android:contentDescription="@string/Content_description_play"
            android:visibility="visible"
            app:srcCompat="@color/transparent" />

    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/track"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="64dp"
        android:layout_marginStart="64dp"
        android:layout_marginTop="16dp"
        android:ellipsize="marquee"
        android:gravity="center"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/Track"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardView" />

    <TextView
        android:id="@+id/singer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:ellipsize="marquee"
        android:marqueeRepeatLimit="marquee_forever"
        android:scrollHorizontally="true"
        android:singleLine="true"
        android:text="@string/Performer"
        android:textAlignment="center"
        android:textSize="16sp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="105dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/track" />

    <android.support.constraint.ConstraintLayout
        android:id="@+id/scroll"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="128dp"
        android:background="@drawable/myrect_light"
        android:elevation="15dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.482"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/Favorite"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textStyle="bold"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginBottom="12dp"
            android:layout_marginLeft="12dp"
            android:layout_marginRight="12dp"
            android:layout_marginTop="30dp"
            android:scrollbarStyle="insideInset"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.521"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

            <LinearLayout
                android:id="@+id/favorite_list"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/fari_text"
                    android:layout_width="match_parent"
                    android:layout_height="64dp"
                    android:layout_gravity="center"
                    android:background="@android:color/transparent"
                    android:elevation="10dp"
                    android:gravity="center"
                    android:text="@string/RadioStation"
                    android:textAppearance="@android:style/TextAppearance.Material.Title" />

            </LinearLayout>
        </ScrollView>
    </android.support.constraint.ConstraintLayout>

    <ImageButton
        android:id="@+id/btn1"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="24dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_search_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn2" />

    <ImageButton
        android:id="@+id/btn2"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_favorite_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn3"
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="32dp"
        android:layout_marginStart="24dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:src="@drawable/ic_settings_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btn2" />


</android.support.constraint.ConstraintLayout>
