<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:layout_editor_absoluteX="8dp"
    tools:layout_editor_absoluteY="8dp"
    android:transitionName="@string/Search">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fitsSystemWindows="true">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/toolbar_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:elevation="10dp"
            android:fitsSystemWindows="true"
            app:layout_scrollFlags="scroll">

            <LinearLayout
                android:id="@+id/lin_l"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@color/white_dark"
                android:gravity="center"
                android:orientation="vertical"
                android:fitsSystemWindows="true">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="10dp"
                    android:layout_gravity="start"
                    android:text="@string/Filters"
                    android:textStyle="bold" />

                <Spinner
                    android:id="@+id/spinner"
                    android:layout_width="match_parent"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_height="50dp"
                    android:fitsSystemWindows="true"/>

                <Spinner
                    android:id="@+id/spinner2"
                    android:layout_marginEnd="20dp"
                    android:layout_marginStart="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:fitsSystemWindows="true"/>

                <RelativeLayout
                    android:id="@+id/lin"
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:fitsSystemWindows="true"
                    android:layout_marginTop="5dp"
                    android:layout_marginEnd="25dp"
                    android:layout_marginStart="25dp">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:layout_marginEnd="40dp"
                        android:layout_alignEnd="@id/imageButton6"
                        android:layout_alignParentStart="true"
                        android:layout_centerVertical="true"
                        android:ellipsize="marquee"
                        android:marqueeRepeatLimit="marquee_forever"
                        android:scrollHorizontally="true"
                        android:singleLine="true"
                        android:text="@string/RadioStation"
                        android:textAppearance="@android:style/TextAppearance.Material.Title" />

                    <ImageButton
                        android:id="@+id/imageButton6"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="40dp"
                        android:layout_alignEnd="@id/imageButton5"
                        android:adjustViewBounds="true"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/Content_description_play"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/play_button" />

                    <ImageButton
                        android:id="@+id/imageButton5"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="40dp"
                        android:adjustViewBounds="true"
                        android:layout_alignEnd="@id/imageButton4"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/Content_description_add"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/add_button" />

                    <ImageButton
                        android:id="@+id/imageButton4"
                        android:layout_width="36dp"
                        android:layout_height="36dp"
                        android:layout_marginEnd="5dp"
                        android:adjustViewBounds="true"
                        android:layout_alignParentEnd="true"
                        android:background="?android:attr/selectableItemBackgroundBorderless"
                        android:contentDescription="@string/Content_description_close"
                        android:scaleType="centerCrop"
                        app:srcCompat="@drawable/delete_button" />

                </RelativeLayout>


            </LinearLayout>


        </android.support.design.widget.CollapsingToolbarLayout>

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:layout_gravity="center"
            android:background="@color/white_dark"
            app:layout_collapseMode="pin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:orientation="horizontal">

                <SearchView
                    android:id="@+id/searchView"
                    android:elevation="1dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="16dp">
                </SearchView>
            </LinearLayout>



            <Switch
                android:id="@+id/switch1"
                android:layout_width="50dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_gravity="end"
                android:onClick="onClick"
                android:switchTextAppearance="@android:style/TextAppearance.Material.Small"
                android:textAlignment="viewEnd"
                android:textAppearance="@android:style/TextAppearance.Material.Small"
                android:textColor="@android:color/darker_gray"
                android:visibility="visible" />

            <TextView
                android:id="@+id/textSwitch"
                android:layout_width="220dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_marginEnd="5dp"
                android:text="@string/mood"
                android:textAlignment="viewEnd" />
        </android.support.v7.widget.Toolbar>


    </android.support.design.widget.AppBarLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/list_kanal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        android:nestedScrollingEnabled="true"
        android:scrollbars="vertical"
        app:layout_behavior="@string/appbar_scrolling_view_behavior" />

</android.support.design.widget.CoordinatorLayout>